--- a/styles.css
+++ b/styles.css
@@ -99,3 +99,22 @@ a {
     justify-content: center;
     color: white;
 }
+
+input {
+    margin: 10px;
+    display: flex;
+
+}
+li {
+    color: white;
+}
+h3 {
+    margin: 10px;
+    color: white;
+}
+
+ul {
+    margin: 10px;
+    display: flex;
+    font-size: 20px;
+}
