--- a/styles.css
+++ b/styles.css
@@ -118,3 +118,18 @@ ul {
     display: flex;
     font-size: 20px;
 }
+
+/* Create three equal columns that floats next to each other */
+.column {
+    float: left;
+    width: 33.33%;
+    padding: 10px;
+    
+  }
+  
+  /* Clear floats after the columns */
+  .row:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
