--- a/styles.css
+++ b/styles.css
@@ -122,7 +122,7 @@ ul {
 /* Create three equal columns that floats next to each other */
 .column {
     float: left;
-    width: 33.33%;
+    width: auto;
     padding: 10px;
     
   }
