--- a/styles.css
+++ b/styles.css
@@ -123,7 +123,7 @@ ul {
 .column {
     float: left;
     width: auto;
-    padding: 10px;
+    padding: 20px;
     
   }
   
@@ -141,5 +141,11 @@ ul {
     margin: auto;
     text-align: center;
     font-size: 22px;
+    color: white;
+  }
+  #date {
+    margin: auto;
+    text-align: center;
+    font-size: 15px;
     color: white;
   }
